--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
       
         <!-- Copyright -->
         <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-          © 2020 Copyright:
-          <a class="text-dark" href="https://mdbootstrap.com/">MDBootstrap.com</a>
+          © 2022 Copyright:
+          <a class="text-dark" href="https://linktr.ee/mlsaxsistec">MLSA x SISTec</a>
         </div>
         <!-- Copyright -->
       </footer>
