--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.3.0/font/bootstrap-icons.css">
     <!-- JavaScript Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
-    <meta name="theme-color" content="#712cf9">
+    <meta name="theme-color" content="#11105c">
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet"/>
     <!-- Google Fonts -->
@@ -97,7 +97,7 @@
             <div class="text-dark">
                 <img src="img/mlsa-logo.png" height="200px" alt=""><br><br>
                 <h1>MLSA x SISTec</h1>
-                <p><strong>Microsoft Learn Student Ambassador Community - SISTec</strong> is a technical community formed under Microsoft Learn Student Ambassador program that aims to get as many student developers together as possible in order to create a robust environment that fosters collaborative learning. We hold engaging workshops and events to ensure the students' learning and advancement.</p>
+                <p><strong>Microsoft Learn Student Ambassador Community - SISTec</strong> is a technical community formed under <strong>Microsoft Learn Student Ambassadors Program </strong>that aims to get as many student developers together as possible in order to create a robust environment that fosters collaborative learning. We hold engaging workshops and events to ensure the students' learning and advancement.</p>
             </div>
 
 
