Updated the Logo Link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 <body>
     <div class="container" id="home">
         <header class="d-flex flex-wrap align-items-center justify-content-center justify-content-md-between py-3 mb-4 border-bottom">
-            <a href="/" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
+            <a href="/GitHack" class="d-flex align-items-center col-md-3 mb-2 mb-md-0 text-dark text-decoration-none">
                 <img src="img/hacktoberfest-logo.png" alt="" srcset="" height="40px"> <h2 class="mt-2">/</h2>
                 <img src="img/mlsa-logo.png" alt="" srcset="" height="40px">
                 <h5 class="m-2">Hacktoberfest <br> MLSA x SISTec</h5>
