--- a/index.html
+++ b/index.html
@@ -43,13 +43,18 @@
             </div>
           </header>
 
-        <div class="container-fluid pb-3" id="contributors">
-            <div class="d-grid gap-3" style="grid-template-columns: 1fr 1fr;">
-              
+          <div class="justify-content-center">
+            <p class="text-center">This webpage is open for contributions under <strong>Hacktoberfest</strong> you can contribute <a href="https://github.com/Ghanshyam89/GitHack" target="_blank" rel="noopener noreferrer"> here</a> !!</p>
+            <p class="text-center"><a class="btn btn-primary" href="https://github.com/Ghanshyam89/GitHack" target="_blank" rel="noopener noreferrer">Contribute Here</a></p>
+          </div>
+
+        <div class="container-fluid pb-3">
+          <h2 id="contributors" class="text-center m-3 mt-4 text-secondary">Contributors</h2>
+            <div class="d-grid gap-3" style="display: grid; grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );">
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3>Aiman Asif></h3>
-                        <ul>
+                        <h3>Aiman Asif</h3>
+                        <ul style="margin-left: -15px;">
                             <li>Branch: CSE</li>
                             <li>College: SISTec GN</li>
                             <li>Github Username: aimanasif27</li>
@@ -61,7 +66,7 @@
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
                         <h3>Ghanshyam Prajapati</h3>
-                        <ul>
+                        <ul style="margin-left: -15px;">
                             <li>Branch: CSE</li>
                             <li>College: SISTec GN</li>
                             <li>Github Username: Ghanshyam89</li>
@@ -73,7 +78,7 @@
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
                         <h3>Raj Singh</h3>
-                        <ul>
+                        <ul style="margin-left: -15px;">
                             <li>Branch: EC</li>
                             <li>College: SISTec RB</li>
                             <li>Github Username: RajRB</li>
@@ -91,7 +96,7 @@
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
                         <h3><!-- Your Name --></h3>
-                        <ul>
+                        <ul style="margin-left: -15px;">
                             <li>Branch: <!-- Your Branch --></li>
                             <li>College: <!-- Your College --></li>
                             <li>Github Username: <!-- Your Github Username --></li>
