--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <!-- Copyright -->
         <div class="text-center text-dark p-3" style="background-color: rgba(0, 0, 0, 0.2);">
           © 2022 Copyright:
-          <a class="text-dark" href="https://linktr.ee/mlsaxsistec">MLSA x SISTec</a>
+          <a class="text-dark" href="https://about.me/ghanshyamprajapati">Ghanshyam Prajapati</a>
         </div>
         <!-- Copyright -->
       </footer>
