--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
               ><i class="fab fa-instagram"></i>
             </a>
 
-            <!-- Web -->
+            <!-- Know more about us! -->
             <a
               class="btn btn-link btn-floating btn-lg text-dark m-1"
               href="https://linktr.ee/mlsaxsistec"
