--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><!-- Your Name --></h3>
+                        <h3>Kush pandey</h3>
                         <ul style="margin-left: -15px;">
                             <li>Branch: <!-- Your Branch --></li>
                             <li>College: <!-- Your College --></li>
