I have added my details as Shaikh Farhan

--- a/index.html
+++ b/index.html
@@ -98,7 +98,17 @@
                         </ul>
                     </div>
                 </div>
-                
+                <div class="bg-light border rounded-3">
+                  <div class="m-4">
+                      <h3>Shaikh Farhan</h3>
+                      <ul style="margin-left: -15px;">
+                          <li>Branch: MCA</li>
+                          <li>College: Allana Institute Of Management and science</li>
+                          <li>Github Username: farhanpro </li>
+                          <li>Tech Stack: MERN </li>
+                      </ul>
+                  </div>
+              </div>
         
 
                 <!-- Copy paste below code above this line-->
