I have added my details as Niranjan Kurhade

--- a/index.html
+++ b/index.html
@@ -123,6 +123,18 @@
                       </ul>
                   </div>
               </div>
+
+              <div class="bg-light border rounded-3">
+                <div class="m-4">
+                  <h3>Niranjan Kurhade</h3>
+                    <ul style="margin-left: -15px;">
+                      <li>Branch: Computer</li>
+                      <li>College: FCRIT</li>
+                      <li>Github Username: niranjan-kurhade</li>
+                      <li>Tech Stack: Java, WebDev, Bootstrap</li>
+                     </ul>
+                </div>
+              </div>
         
 
 
