--- a/index.html
+++ b/index.html
@@ -141,17 +141,17 @@
                 </div>
                 <!-- Copy paste below code above this and update your respective details-->
                 
-                <div class="bg-light border rounded-3">
-                    <div class="m-4">
-                        <h3><!-- Your Name --></h3>
-                        <ul style="margin-left: -15px;">
-                            <li>Branch: <!-- Your Branch --></li>
-                            <li>College: <!-- Your College --></li>
-                            <li>Github Username: <!-- Your Github Username --></li>
-                            <li>Tech Stack: <!-- Your Technical Skills --></li>
-                        </ul>
-                    </div>
-                </div>
+              <div class="bg-light border rounded-3">
+                  <div class="m-4">
+                      <h3>Uma Shankar Mishra</h3>
+                      <ul style="margin-left: -15px;">
+                          <li>Branch: CSE</li>
+                          <li>College: SISTec RB</li>
+                          <li>Github Username: umashankarm655 </li>
+                          <li>Tech Stack: basic C Programming,basic C++ Programming,HTML, CSS, Working on JavaScript and Java.</li>
+                      </ul>
+                  </div>
+              </div>
 
                 <!-- Copy above code till here -->
 
