--- a/index.html
+++ b/index.html
@@ -139,6 +139,18 @@
                        </ul>
                   </div>
                 </div>
+                
+                <div class="bg-light border rounded-3">
+                  <div class="m-4">
+                    <h3>Rishi Shukla</h3>
+                      <ul style="margin-left: -15px;">
+                        <li>Branch: MCA</li>
+                        <li>College: VSICS</li>
+                        <li>Github Username: rishishukla09</li>
+                        <li>Tech Stack: Web development, Python, etc</li>
+                       </ul>
+                  </div>
+                </div>
                 <!-- Copy paste below code above this and update your respective details-->
                 
                 <div class="bg-light border rounded-3">
