I have added my details as <Sahil Ghonge>

--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><!-- Your Name --></h3>
+                        <h3>Sahil Ghonge</h3>
                         <ul style="margin-left: -15px;">
-                            <li>Branch: <!-- Your Branch --></li>
-                            <li>College: <!-- Your College --></li>
-                            <li>Github Username: <!-- Your Github Username --></li>
-                            <li>Tech Stack: <!-- Your Technical Skills --></li>
+                            <li>Branch: CSE</li>
+                            <li>College: SISTec RB</li>
+                            <li>Github Username: SahilGhonge</li>
+                            <li>Tech Stack:basic C & C++Programming,HTML,CSS,Working on Javascript and JAVA</li>
                         </ul>
                     </div>
                 </div>
