--- a/index.html
+++ b/index.html
@@ -206,12 +206,12 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3></h3>
+                        <h3><!-- Your Name --></h3>
                         <ul style="margin-left: -15px;">
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                            <li></li>
+                            <li><!-- Your Branch --></li>
+                            <li><!-- Your College --></li>
+                            <li><!-- Your Github Username --></li>
+                            <li><!-- Your Technical Skills --></li>
                         </ul>
                     </div>
                 </div>
