I have added my details as <Sahil Ghonge>

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><!-- Your Name --></h3>
+                        <h3><!-- Your name --></h3>
                         <ul style="margin-left: -15px;">
                             <li>Branch: <!-- Your Branch --></li>
                             <li>College: <!-- Your College --></li>
