--- a/index.html
+++ b/index.html
@@ -212,9 +212,9 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3>Swapnil Lodhi</h3>
+                        <h3><!-- Your name --></h3>
                         <ul style="margin-left: -15px;">
-                            <li>Branch: CSE</li>
+                            <li>Branch:><!-- Your Branch --></li>
                             <li>College: <!-- Your College --></li>
                             <li>Github Username: <!-- Your Github Username --></li>
                             <li>Tech Stack: <!-- Your Technical Skills --></li>
