--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
       
             <div class="col-md-3 text-end">
                 <!-- <a href="#" class="me-3"><i class="fab fa-github fa-2x text-dark"></i></a> -->
-                <a href="https://www.linkedin.com/company/mlsa-x-sistec" class="me-3"><i class="fab fa-linkedin fa-2x text-dark"></i></a>
-                <a href="https://discord.gg/4MsjNAruD5" class="me-3"><i class="fab fa-discord fa-2x text-dark"></i></a>
-                <a href="https://instagram.com/mlsaxsistec?igshid=YmMyMTA2M2Y=" class="me-3"><i class="fab fa-instagram fa-2x text-dark"></i></a>
+                <a href="https://www.linkedin.com/company/mlsa-x-sistec" class="me-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin fa-2x text-dark"></i></a>
+                <a href="https://discord.gg/4MsjNAruD5" class="me-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-discord fa-2x text-dark"></i></a>
+                <a href="https://instagram.com/mlsaxsistec?igshid=YmMyMTA2M2Y=" class="me-3" target="_blank" rel="noopener noreferrer"><i class="fab fa-instagram fa-2x text-dark"></i></a>
             </div>
           </header>
 
@@ -352,7 +352,7 @@
               class="btn btn-link btn-floating btn-lg text-dark m-1"
               href="https://discord.gg/4MsjNAruD5"
               role="button"
-              data-mdb-ripple-color="dark"
+              data-mdb-ripple-color="dark" target="_blank" rel="noopener noreferrer"
               ><i class="fab fa-discord"></i>
             </a>
 
@@ -361,7 +361,7 @@
               class="btn btn-link btn-floating btn-lg text-dark m-1"
               href="https://instagram.com/mlsaxsistec?igshid=YmMyMTA2M2Y="
               role="button"
-              data-mdb-ripple-color="dark"
+              data-mdb-ripple-color="dark" target="_blank" rel="noopener noreferrer"
               ><i class="fab fa-instagram"></i>
             </a>
 
@@ -370,7 +370,7 @@
               class="btn btn-link btn-floating btn-lg text-dark m-1"
               href="https://linktr.ee/mlsaxsistec"
               role="button"
-              data-mdb-ripple-color="dark"
+              data-mdb-ripple-color="dark" target="_blank" rel="noopener noreferrer"
               ><i class="fab fa-angle-double-up"></i>
             </a>
           </section>
