--- a/index.html
+++ b/index.html
@@ -344,7 +344,7 @@
               class="btn btn-link btn-floating btn-lg text-dark m-1"
               href="https://www.linkedin.com/company/mlsa-x-sistec"
               role="button"
-              data-mdb-ripple-color="dark"
+              data-mdb-ripple-color="dark" target="_blank" rel="noopener noreferrer"
               ><i class="fab fa-linkedin"></i>
             </a>
             <!-- Discord -->
