I have added my details as Krishna Agrawal

--- a/index.html
+++ b/index.html
@@ -311,12 +311,12 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><!-- Your name --></h3>
+                        <h3>Krishna Agrawal</h3>
                         <ul style="margin-left: -15px;">
-                            <li>Branch: <!-- Your Branch --></li>
-                            <li>College: <!-- Your College --></li>
-                            <li>Github Username: <!-- Your Github Username --></li>
-                            <li>Tech Stack: <!--Your Technical Skills --></li>
+                            <li>Branch: CSE</li>
+                            <li>College: KIET Group Of Institutions</li>
+                            <li>Github Username: krishnagithub03</li>
+                            <li>Tech Stack: C,C++,HTML,CSS</li>
                         </ul>
                     </div>
                 </div>
