--- a/index.html
+++ b/index.html
@@ -342,8 +342,20 @@
                         </ul>
                     </div>
                 </div>
+                
+                <div class="bg-light border rounded-3">
+                <div class="m-4">
+                    <h3>Yash Kushwah</h3>
+                    <ul style="margin-left: -15px;">
+                        <li>Branch: CSE</li>
+                        <li>College: SISTec-RB</li>
+                        <li>Github Username: Yashk242003</li>
+                        <li>Tech Stack: C++,JAVA,Web development,MYSQL,Python</li>
+                    </ul>
+                </div>
+            </div>
+                
                 <!-- Copy above code till here -->
-
             </div>
           </div>
     </div>
