--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <li>Branch: CSE</li>
                             <li>College: SISTec GN</li>
                             <li>Github Username: aimanasif27</li>
-                            <li>Tech Stack: Python, C Programming, Django, etc.</li>
+                            <li>Tech Stack: Python, C Programming, Django, SQL, etc.</li>
                         </ul>
                     </div>
                 </div>
