--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <li>Branch: CSE</li>
                             <li>College: SISTec GN</li>
                             <li>Github Username: Ghanshyam89</li>
-                            <li>Tech Stack: Python, Java, Django, etc.</li>
+                            <li>Tech Stack: Python, Java, Django, SQL etc.</li>
                         </ul>
                     </div>
                 </div>
