--- a/index.html
+++ b/index.html
@@ -51,6 +51,19 @@
         <div class="container-fluid pb-3">
           <h2 id="contributors" class="text-center m-3 mt-4 text-secondary">Contributors</h2>
             <div class="d-grid gap-3" style="display: grid; grid-template-columns: repeat( auto-fit, minmax(250px, 1fr) );">
+                
+                <div class="bg-light border rounded-3">
+                    <div class="m-4">
+                        <h3>Deepanshu Goel</h3>
+                        <ul style="margin-left: -15px;">
+                            <li>Branch: CSE</li>
+                            <li>College: AKTU</li>
+                            <li>Github Username: DeepanshuGoel1122</li>
+                            <li>Tech Stack: Java, Javascript, React,SQL </li>
+                        </ul>
+                    </div>
+                </div>
+                
                 <div class="bg-light border rounded-3">
                     <div class="m-4">
                         <h3>Aiman Asif</h3>
