--- a/index.html
+++ b/index.html
@@ -343,7 +343,20 @@
                     </div>
                 </div>
                 <!-- Copy above code till here -->
-
+                
+               <div class="bg-light border rounded-3">
+                    <div class="m-4">
+                        <h3><!-- Your name --></h3>
+                        <ul style="margin-left: -15px;">
+                            <li>Branch: <!-- Your Branch --></li>
+                            <li>College: <!-- Your College --></li>
+                            <li>Github Username: <!-- Your Github Username --></li>
+                            <li>Tech Stack: <!--Your Technical Skills --></li>
+                        </ul>
+                    </div>
+                </div>
+                <!-- Copy above code till here -->
+                
             </div>
           </div>
     </div>
