--- a/index.html
+++ b/index.html
@@ -331,7 +331,7 @@
                             <li>Branch: Computer Science and Engineering</li>
                             <li>College: Sagar Institute of Science & Technology</li>
                             <li>Github Username: Hardik Kushwaha</li>
-                            <li>Tech Stack: Python, Cloud Computing, Linux></li>
+                            <li>Tech Stack: Python, Cloud Computing, Linux</li>
                         </ul>
                     </div>
              </div>
