Change the file according to changes required

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
 
             <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><Hardik Kushwaha></h3>
+                        <h3>Hardik Kushwaha</h3>
                         <ul style="margin-left: -15px;">
                             <li>Branch: Computer Science and Engineering</li>
                             <li>College: Sagar Institute of Science & Technology</li>
