--- a/index.html
+++ b/index.html
@@ -336,6 +336,17 @@
                     </div>
              </div>
 
+             <div class="bg-light border rounded-3">
+                    <div class="m-4">
+                        <h3>Arjun Thakur</h3>
+                        <ul style="margin-left: -15px;">
+                            <li>Branch: Computer Science and Engineering</li>
+                            <li>College: Technocrats Institute of Technology(TIT)</li>
+                            <li>Github Username: Arjun-Thakur18</li>
+                            <li>Tech Stack: Python and Java</li>
+                        </ul>
+                    </div>
+              </div>
               <!-- Paste the Code here -->
               
               
