--- a/index.html
+++ b/index.html
@@ -371,6 +371,18 @@
                      </ul>
                 </div>
               </div>
+                
+              <div class="bg-light border rounded-3">
+                    <div class="m-4">
+                        <h3>Yash Khushwah</h3>
+                        <ul style="margin-left: -15px;">
+                            <li>Branch: CSE</li>
+                            <li>College: SISTec RB</li>
+                            <li>Github Username: lukeskywlaker</li>
+                            <li>Tech Stack: C++,C,JAVA,HTML,CSS,Cloud Computing, Linux</li>
+                        </ul>
+                    </div>
+                </div>
 
               <!-- Paste the Code here -->
 
