--- a/index.html
+++ b/index.html
@@ -383,6 +383,28 @@
                         </ul>
                     </div>
                 </div>
+                
+                <div class="bg-light border rounded-3">
+
+                    <div class="m-4">
+
+                        <h3>Vinyas Hegde</h3>
+
+                        <ul style="margin-left: -15px;">
+
+                            <li>Branch: CE</li>
+
+                            <li>College: Pillai Hoc</li>
+
+                            <li>Github Username: vinyashegde</li>
+
+                            <li>Tech Stack: C++,C,HTML,CSS, JavaScript</li>
+
+                        </ul>
+
+                    </div>
+
+                </div>
 
               <!-- Paste the Code here -->
 
