I've addded my details as Ankit Shilarkar

--- a/index.html
+++ b/index.html
@@ -416,7 +416,17 @@
 
                 </div>
 
-
+                <div class="bg-light border rounded-3">
+                  <div class="m-4">
+                      <h3>Ankit Shilarkar<!-- Your name --></h3>
+                      <ul style="margin-left: -15px;">
+                          <li>Branch: CSE<!-- Your Branch --></li>
+                          <li>College: SISTec-GN<!-- Your College --></li>
+                          <li>Github Username: ankit-shilarkar<!-- Your Github Username --></li>
+                          <li>Tech Stack: DSA,C,C++,ML<!--Your Technical Skills --></li>
+                      </ul>
+                  </div>
+              </div>
               <!-- Paste the Code here -->
 
               
