--- a/index.html
+++ b/index.html
@@ -436,12 +436,12 @@
               <!-- Copy paste below code above this and update your respective details-->
               <div class="bg-light border rounded-3">
                     <div class="m-4">
-                        <h3><!-- Your name --></h3>
+                        <h3>Harshit Dongre<!-- Your name --></h3>
                         <ul style="margin-left: -15px;">
-                            <li>Branch: <!-- Your Branch --></li>
-                            <li>College: <!-- Your College --></li>
-                            <li>Github Username: <!-- Your Github Username --></li>
-                            <li>Tech Stack: <!--Your Technical Skills --></li>
+                            <li>Branch: CSE<!-- Your Branch --></li>
+                            <li>College: SISTEC-GN<!-- Your College --></li>
+                            <li>Github Username: Harshit1020<!-- Your Github Username --></li>
+                            <li>Tech Stack:JavaScript,Node.js,C,Java,Python<!--Your Technical Skills --></li>
                         </ul>
                     </div>
                 </div>
