--- a/index.html
+++ b/index.html
@@ -163,6 +163,18 @@
                 
                 <div class="bg-light border rounded-3">
                   <div class="m-4">
+                      <h3>Mr. Harsh kushwah</h3>
+                      <ul style="margin-left: -15px;">
+                          <li>Branch: CSE</li>
+                          <li>College: SISTec-GN</li>
+                          <li>Github Username: harshkushwahanimelover</li>
+                          <li>Tech Stack: Web-dev, C, Cpp</li>
+                      </ul>
+                  </div>
+              </div>
+
+                <div class="bg-light border rounded-3">
+                  <div class="m-4">
                     <h3>Rishi Shukla</h3>
                       <ul style="margin-left: -15px;">
                         <li>Branch: MCA</li>
