KP commit no. 4

--- a/index.html
+++ b/index.html
@@ -173,6 +173,18 @@
                   </div>
               </div>
 
+              <div class="bg-light border rounded-3">
+                <div class="m-4">
+                    <h3>Mr. Ayush Mishra</h3>
+                    <ul style="margin-left: -15px;">
+                        <li>Branch: CSE</li>
+                        <li>College: SISTec-GN</li>
+                        <li>Github Username: Ayushmishra69</li>
+                        <li>Tech Stack: Web-dev, C, Cpp, Python,django,mysql</li>
+                    </ul>
+                </div>
+            </div>
+
                 <div class="bg-light border rounded-3">
                   <div class="m-4">
                     <h3>Rishi Shukla</h3>
